Fix issue with Show/Hide function for colaps the configs.  Shorten the Password and IP fields.  Restrict the IP field to 15 char. to help avoid invalid data.  Format and alignment adjustments.  Add more 'apple' options for the index.php

--- a/app/assets/styles/default/style.css
+++ b/app/assets/styles/default/style.css
@@ -65,3 +65,23 @@ body {
 .gm-style-iw {
   color: #000;
 }
+
+.showhideconfigButton {
+  display:block;
+}
+
+.showhideconfig {
+  display:none;
+}
+
+.showhideconfig::before {
+  /* content:'This is my menumode' */
+}
+
+.fieldInfo-password {
+  max-width: 330px;
+}
+
+.fieldInfo-ipaddress {
+  max-width: 150px;
+}
